# example-yaml-schema

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test.yaml
my-cool-app/: config.schema.json  config.yaml
test/: schema.test.js  test_schema.py
